--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src=""></script>
+    <script>
+        hello();
+    </script>
+    <script src="/src/script.js"></script>
 </body>
 </html>
