add welcome to index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Welcome to Git</h1>
     <script>
         hello();
     </script>
+    <!-- smth later commit  -->
     <script src="/src/script.js"></script>
 </body>
 </html>
