--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to Git</h1>
     <script>
         hello();
-        ///.....
+        work();
     </script>
     <!-- smth later commit  -->
     <script src="/src/script.js"></script>
